--- a/dev/p5.html
+++ b/dev/p5.html
@@ -18,7 +18,7 @@
 
 <body>
 	<main></main>
-	<script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/p5@1/lib/addons/p5.sound.min.js"></script>
 	<script src="test.js"></script>
 </body>
