--- a/home/index.html
+++ b/home/index.html
@@ -150,37 +150,15 @@ function windowResized() {
 	<div id="reel10">
 		<md id="md10-0">
 			<h2 id="why-switch-from-p5-⚖️">Why switch from p5? ⚖️</h2>
-			<p>In October 2023, Processing's co-founder, Ben Fry, <a href="https://x.com/ben_fry/status/1709400641456501020"
-					target="_blank">publicly criticized</a> The Processing Foundation for squandering <a
-					href="https://medium.com/processing-foundation/processing-foundation-funding-update-94cddb25a3d9"
-					target="_blank">millions of dollars</a> and resigned. 🚪</p>
-			<p>So where is all that donor money going? 💸</p>
-			<p>Many of the proposed <a href="https://github.com/processing/p5.js/issues/6678" target="_blank">"2.0"
-					updates</a> to p5.js are years overdue. The p5 web editor has <a
-					href="https://medium.com/processing-foundation/hello-p5-js-web-editor-b90b902b74cf" target="_blank">hardly
-					changed since it released in 2018</a>. Even the legendary Dan Shiffman has been waiting on a <a
-					href="https://github.com/processing/p5.js-web-editor/issues/208#issuecomment-263898359"
-					target="_blank">feature request for 7 years and counting</a>. So what hope does anyone else have at getting
-				their suggestions implemented? 📅</p>
-			<p>Volunteers are doing most of the real work on p5 and the p5 ecosystem, yet it still takes months for paid staff
-				to simply approve and publish crucial updates. Even the most popular third party p5 library, <a
-					href="https://p5play.org" target="_blank">p5play</a>, hasn't been offered a cent from the foundation. 😔</p>
-			<p>Why can't staff focus on p5? Perhaps because even the foundation's executives are too busy <a
-					href="https://www.linkedin.com/in/edsaber/" target="_blank">taking paychecks from other full-time jobs</a>.
-				🕵️</p>
-			<p>When confronted about any of this on Discord or GitHub, the p5 team ignores or bans posts by upset users,
-				citing "verbal violence" and playing the victim. It seems they'd prefer to take their $80k-$160k salaries in
-				peace. 🎂</p>
-			<p><a href="https://processingfoundation.org/" target="_blank">The Processing Foundation website</a> is filled
-				with aspirational platitudes but their actions speak louder than words. Many people in the community feel like
-				their trust in the foundation has been betrayed. 🤥</p>
-		</md>
-		<md id="md10-1">
-			<h2 id="q5-is-the-future-⌚️">q5 is the future ⌚️</h2>
-			<p>The q5 team aims to right these wrongs by being financially transparent, quick with useful updates, and
-				receptive to all feedback (especially criticism). 📝</p>
-			<p>We're inspired to carry on the legacy of Processing and truly champion the original creators' goals. Creative
-				coders deserve better, let's make it happen together! 🤝</p>
+			<p>In October 2023, The Processing Foundation's co-founder, Ben Fry, resigned and publicly criticized management
+				for <a href="https://x.com/ben_fry/status/1709400641456501020" target="_blank">squandering millions of dollars
+					in donations</a>.</p>
+			<p>Despite taking exorbitant salaries, the foundation's executives are too busy <a
+					href="https://www.linkedin.com/in/edsaber/" target="_blank">working other full-time jobs</a> to focus on p5.
+				Volunteers still do most of the real work, yet it takes several months for paid staff to simply approve and
+				publish crucial updates. 🕵️</p>
+			<p>Creative coders deserve better, let's make it happen together! q5 will be run as a worker co-op. All
+				contributors will be fairly compensated for their work. 🤝</p>
 		</md>
 	</div>
 	<div id="reel6">
@@ -286,45 +264,6 @@ function windowResized() {
 	<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.18.0/src-min-noconflict/ext-language_tools.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.18.0/src-min-noconflict/ext-beautify.js"></script>
 	<script src="/home/mie.js"></script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
