--- a/dev/index.html
+++ b/dev/index.html
@@ -18,7 +18,21 @@
 
 <body>
 	<main></main>
-	<script src="../q5.js"></script>
+	<script src="/src/q5-core.js"></script>
+
+	<script src="/src/q5-2d-canvas.js"></script>
+	<script src="/src/q5-2d-drawing.js"></script>
+	<script src="/src/q5-2d-image.js"></script>
+	<script src="/src/q5-2d-text.js"></script>
+	<script src="/src/q5-ai.js"></script>
+	<script src="/src/q5-color.js"></script>
+	<script src="/src/q5-input.js"></script>
+	<script src="/src/q5-math.js"></script>
+	<!-- <script src="/src/q5-sensors.js"></script> -->
+	<script src="/src/q5-sound.js"></script>
+	<script src="/src/q5-util.js"></script>
+	<script src="/src/q5-vector.js"></script>
+
 	<script src="test.js"></script>
 </body>
 
