--- a/dev/index.html
+++ b/dev/index.html
@@ -20,6 +20,11 @@
 	<main></main>
 	<script src="/src/q5-core.js"></script>
 
+	<!-- <script src="/src/q5-2d-canvas.js"></script>
+	<script src="/src/q5-2d-drawing.js"></script>
+	<script src="/src/q5-color.js"></script>
+	<script src="/src/q5-input.js"></script> -->
+
 	<script src="/src/q5-2d-canvas.js"></script>
 	<script src="/src/q5-2d-drawing.js"></script>
 	<script src="/src/q5-2d-image.js"></script>
@@ -28,7 +33,6 @@
 	<script src="/src/q5-color.js"></script>
 	<script src="/src/q5-input.js"></script>
 	<script src="/src/q5-math.js"></script>
-	<!-- <script src="/src/q5-sensors.js"></script> -->
 	<script src="/src/q5-sound.js"></script>
 	<script src="/src/q5-util.js"></script>
 	<script src="/src/q5-vector.js"></script>
