--- a/home/index.html
+++ b/home/index.html
@@ -23,9 +23,11 @@
 	<div id="reel1">
 		<md id="md1-0">
 			<h2 id="the-sequel-to-p5js-is-here-🎉">The sequel to p5.js is here! 🎉</h2>
-			<p>q5.js implements all of <a href="https://p5js.org" target="_blank">p5</a>'s 2D drawing, math, and user input
-				functionality.</p>
-			<p>It's a drop-in replacement that's performance optimized and ~20x smaller than p5.</p>
+			<p>q5.js is a new implementation of the <a href="https://p5js.org" target="_blank">p5</a> API that's performance
+				optimized and packed with additional features to make creative coding even more fun and accessible.</p>
+			<p>q5 works out of the box with your existing p5 2D sketches and even supports popular libraries like <a
+					href="https://p5js.org/reference/#/libraries/p5.sound" target="_blank">p5.sound</a> and <a
+					href="https://p5play.org" target="_blank">p5play</a>.</p>
 		</md>
 		<div class="minis horiz">
 			<script type="mie/p5" id="p5.js" horiz="" width="350px">
@@ -80,7 +82,7 @@ function windowResized() {
 }
 				</script>
 				<md id="md2-1">
-					<p>In p5, bright colors look dull on modern devices 😕</p>
+					<p>In p5, bright colors can look dull on modern devices 😕</p>
 				</md>
 			</div>
 			<div>
@@ -122,44 +124,48 @@ function windowResized() {
 	<div id="reel3">
 		<md id="md3-0">
 			<h2 id="more-help-for-beginners-✨">More help for beginners ✨</h2>
-			<p>Why doesn't this code work? <code>text('Hello!');</code></p>
-			<p>p5's error messages are often too vague and leave beginners searching for help. 🙋</p>
-			<pre><code>🌸 p5.js says: [test.js, line 19] text() was expecting at least 3 arguments, but received only 1.
-</code></pre>
-			<p>q5 creates error reports that can be sent to an AI just by clicking a link! Users can also run the
-				<code>askAI()</code> function before code that isn't working as expected. 🤖</p>
-			<pre><code class="language-js">function draw() {
-    askAI();
-    text('Hello!');
-}
-</code></pre>
-			<p>ChatGPT 4o excels at identifying the most common errors that beginners make: typos, missing syntax, incorrect
-				arguments, and more.</p>
+			<p>Why doesn't this code work? <code>text('Hello!')</code> 🤔</p>
 		</md>
-		<img src="ai_help.webp" alt="AI help">
+		<div class="minis horiz">
+			<md id="md3-1">
+				<p>p5's error messages are often too vague, leaving users searching for help. 🙋</p>
+				<pre><code>🌸 p5.js says: [test.js, line 19] text() was expecting at least 3 arguments, but received only 1.
+</code></pre>
+				<p>Why not ask ChatGPT 4o? It excels at identifying the most common errors that beginners make: typos, missing
+					syntax, incorrect arguments, and more.</p>
+			</md>
+			<md id="md3-2">
+				<p>Run q5's <code>askAI()</code> function before code that isn't working as expected. 🤖</p>
+				<pre><code>The `text` function requires the x and y coordinates where the text should be drawn to the canvas.
+
+text('Hello!', 50, 50);
+</code></pre>
+				<p>Spend less time debugging and more time creating! 🐛</p>
+			</md>
+		</div>
 	</div>
 	<div id="reel4">
-		<md id="md4-0">
-			<h2 id="more-freedom-🔥">More freedom 🔥</h2>
-			<p>q5 is open source licensed under the <a href="../LICENSE.md" target="_blank">LGPLv3</a>, so you can even use it
-				for free in commercial projects. 🆓</p>
-			<p>The q5 team is committed to fostering an inclusive community. Join us on the <a
-					href="https://discord.gg/QuxQYwGWuB" target="_blank">q5.js Discord</a>! 🗺️</p>
-		</md>
-	</div>
-	<div id="reel10">
-		<md id="md10-0">
-			<h2 id="why-switch-from-p5-⚖️">Why switch from p5? ⚖️</h2>
-			<p>In October 2023, The Processing Foundation's co-founder, Ben Fry, resigned and publicly criticized management
-				for <a href="https://x.com/ben_fry/status/1709400641456501020" target="_blank">squandering millions of dollars
-					in donations</a>.</p>
-			<p>Despite taking exorbitant salaries, the foundation's executives are too busy <a
-					href="https://www.linkedin.com/in/edsaber/" target="_blank">working other full-time jobs</a> to focus on p5.
-				Volunteers still do most of the real work, yet it takes several months for paid staff to simply approve and
-				publish crucial updates. 🕵️</p>
-			<p>Creative coders deserve better, let's make it happen together! q5 will be run as a worker co-op. All
-				contributors will be fairly compensated for their work. 🤝</p>
-		</md>
+		<div class="minis horiz">
+			<md id="md4-0">
+				<h2 id="more-flexible-🤹">More flexible 🤹</h2>
+				<p>q5's top-level global mode makes the <code>setup</code> function optional, letting you use q5 functions
+					anywhere. 👀</p>
+				<pre><code class="language-js">new Q5();
+
+createCanvas(400, 400);
+</code></pre>
+			</md>
+			<md id="md4-1">
+				<h2 id="modular-design-🧩">Modular design 🧩</h2>
+				<p>q5 is already ~20x smaller than p5, but for extremely lightweight use, load only the features you need from
+					the <a href="https://github.com/quinton-ashley/q5.js/tree/main/src" target="_blank"><code>src</code>
+						folder</a>. 📦</p>
+				<pre><code class="language-html">&lt;script src="https://q5js.org/src/q5-core.js"&gt;
+&lt;script src="https://q5js.org/src/q5-2d-canvas.js"&gt;
+&lt;script src="https://q5js.org/src/q5-2d-drawing.js"&gt;
+</code></pre>
+			</md>
+		</div>
 	</div>
 	<div id="reel6">
 		<md id="md6-0">
@@ -169,7 +175,22 @@ function windowResized() {
 				rendering. Stay tuned! 🏎️</p>
 		</md>
 	</div>
-	<footer>Created by Quinton Ashley</footer>
+	<div id="reel10">
+		<md id="md10-0">
+			<h2 id="why-not-contribute-to-p5-⚖️">Why not contribute to p5? ⚖️</h2>
+			<p>In October 2023, The Processing Foundation's co-founder, Ben Fry, resigned and publicly criticized management
+				for <a href="https://x.com/ben_fry/status/1709400641456501020" target="_blank">squandering millions of dollars
+					in donations</a>.</p>
+			<p>Despite taking exorbitant salaries, the foundation's executives are too <a
+					href="https://www.linkedin.com/in/edsaber/" target="_blank">busy working other full-time jobs</a> to focus on
+				p5. Volunteers still do most of the real work, yet it takes months for paid staff to approve and publish crucial
+				updates. 🕵️</p>
+			<p>Creative coders deserve better: let's make it happen together! q5 will be run as a <a
+					href="https://en.wikipedia.org/wiki/Worker_cooperative" target="_blank">worker co-op</a>. All contributors
+				will be fairly compensated for their work. 🤝</p>
+		</md>
+	</div>
+
 	<script src="../q5.js"></script>
 	<script>
 		let lavas = [];
@@ -264,6 +285,39 @@ function windowResized() {
 	<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.18.0/src-min-noconflict/ext-language_tools.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.18.0/src-min-noconflict/ext-beautify.js"></script>
 	<script src="/home/mie.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
