--- a/home/index.html
+++ b/home/index.html
@@ -19,6 +19,14 @@
 			</a>
 			<textarea rows="1" readonly="">&lt;script src="https://q5js.org/q5.js"&gt;&lt;/script&gt;</textarea>
 		</div>
+		<nav>
+			<div class="btn">
+				<div id="darkModeIcon"></div>
+			</div>
+			<div class="btn">
+				<div id="fullscreenIcon"></div>
+			</div>
+		</nav>
 	</div>
 	<div id="reel1">
 		<md id="md1-0">
@@ -150,7 +158,7 @@ text('Hello!', 50, 50);
 				<h2 id="more-flexible-🤹">More flexible 🤹</h2>
 				<p>q5's top-level global mode makes the <code>setup</code> function optional, letting you use q5 functions
 					anywhere. 👀</p>
-				<pre><code class="language-js">new Q5();
+				<pre><code class="language-js">Q5();
 
 createCanvas(400, 400);
 </code></pre>
@@ -174,16 +182,25 @@ createCanvas(400, 400);
 					href="https://developer.mozilla.org/en-US/docs/Web/API/WebGPU_API" target="_blank">WebGPU</a> for blazing fast
 				rendering. Stay tuned! 🏎️</p>
 		</md>
+		<md id="md6-1">
+			<h2 id="join-our-community-🤝">Join our community 🤝</h2>
+			<p>The future of creative coding is here! Join us on the <a href="" target="_blank">q5 community Discord</a>.</p>
+			<p>If you'd like to work on q5.js, check out our <a
+					href="https://github.com/quinton-ashley/q5.js/?tab=readme-ov-file#contributor-code-of-conduct"
+					target="_blank">Contributor Code of Conduct</a> and <a
+					href="https://github.com/users/quinton-ashley/projects/4/views/1" target="_blank">Project Planning Board</a>.
+			</p>
+		</md>
 	</div>
 	<div id="reel10">
 		<md id="md10-0">
-			<h2 id="why-not-contribute-to-p5-⚖️">Why not contribute to p5? ⚖️</h2>
+			<h2 id="why-make-q5-⚖️">Why make q5? ⚖️</h2>
 			<p>In October 2023, The Processing Foundation's co-founder, Ben Fry, resigned and publicly criticized management
 				for <a href="https://x.com/ben_fry/status/1709400641456501020" target="_blank">squandering millions of dollars
 					in donations</a>.</p>
 			<p>Despite taking exorbitant salaries, the foundation's executives are too <a
 					href="https://www.linkedin.com/in/edsaber/" target="_blank">busy working other full-time jobs</a> to focus on
-				p5. Volunteers still do most of the real work, yet it takes months for paid staff to approve and publish crucial
+				p5. Volunteers do most of the real work, yet it takes months for paid staff to approve and publish crucial
 				updates. 🕵️</p>
 			<p>Creative coders deserve better: let's make it happen together! q5 will be run as a <a
 					href="https://en.wikipedia.org/wiki/Worker_cooperative" target="_blank">worker co-op</a>. All contributors
@@ -281,49 +298,11 @@ createCanvas(400, 400);
 		}
 
 	</script>
-	<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.18.0/src-min-noconflict/ace.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.18.0/src-min-noconflict/ext-language_tools.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.18.0/src-min-noconflict/ext-beautify.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.34.2/src-min-noconflict/ace.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.34.2/src-min-noconflict/ext-language_tools.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.34.2/src-min-noconflict/ext-beautify.js"></script>
+	<script src="main.js"></script>
 	<script src="/home/mie.js"></script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
 
 </html>
