--- a/home/index.html
+++ b/home/index.html
@@ -13,7 +13,7 @@
 	<main></main>
 	<div id="reel0">
 		<div class="brand">
-			<a href="https://github.com/quinton-ashley/q5.js">
+			<a href="https://github.com/q5js/q5.js">
 				<div class="img q5js_logo"></div>
 				<div class="img q5js_brand"></div>
 			</a>
@@ -123,7 +123,7 @@ function windowResized() {
 			</script>
 				<md id="md2-2">
 					<p>q5 empowers artists with a <a
-							href="https://github.com/quinton-ashley/q5.js?tab=readme-ov-file#new-features-hdr-color-support"
+							href="https://github.com/q5js/q5.js?tab=readme-ov-file#new-features-hdr-color-support"
 							target="_blank">wider range of colors</a> 🤩</p>
 				</md>
 			</div>
@@ -166,7 +166,7 @@ createCanvas(400, 400);
 			<md id="md4-1">
 				<h2 id="modular-design-🧩">Modular design 🧩</h2>
 				<p>q5 is already ~20x smaller than p5, but for extremely lightweight use, load only the features you need from
-					the <a href="https://github.com/quinton-ashley/q5.js/tree/main/src" target="_blank"><code>src</code>
+					the <a href="https://github.com/q5js/q5.js/tree/main/src" target="_blank"><code>src</code>
 						folder</a>. 📦</p>
 				<pre><code class="language-html">&lt;script src="https://q5js.org/src/q5-core.js"&gt;
 &lt;script src="https://q5js.org/src/q5-2d-canvas.js"&gt;
@@ -186,7 +186,7 @@ createCanvas(400, 400);
 			<h2 id="join-our-community-🤝">Join our community 🤝</h2>
 			<p>The future of creative coding is here! Join us on the <a href="" target="_blank">q5 community Discord</a>.</p>
 			<p>If you'd like to work on q5.js, check out our <a
-					href="https://github.com/quinton-ashley/q5.js/?tab=readme-ov-file#contributor-code-of-conduct"
+					href="https://github.com/q5js/q5.js/?tab=readme-ov-file#contributor-code-of-conduct"
 					target="_blank">Contributor Code of Conduct</a> and <a
 					href="https://github.com/users/quinton-ashley/projects/4/views/1" target="_blank">Project Planning Board</a>.
 			</p>
