--- a/dev/p5.html
+++ b/dev/p5.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
 	<title>p5.js testing</title>
-	<link rel="icon" href="/assets/favicon.png" />
+	<link rel="icon" href="https://p5js.org/assets/img/favicon.ico" />
 	<style>
 		html,
 		body {
