--- a/dev/index.html
+++ b/dev/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
 	<title>q5.js testing</title>
-	<link rel="icon" href="/assets/favicon.png" />
+	<link rel="icon" href="/q5js_logo.webp" />
 	<style>
 		html,
 		body {
@@ -19,12 +19,6 @@
 <body>
 	<main></main>
 	<script src="/src/q5-core.js"></script>
-
-	<!-- <script src="/src/q5-2d-canvas.js"></script>
-	<script src="/src/q5-2d-drawing.js"></script>
-	<script src="/src/q5-color.js"></script>
-	<script src="/src/q5-input.js"></script> -->
-
 	<script src="/src/q5-2d-canvas.js"></script>
 	<script src="/src/q5-2d-drawing.js"></script>
 	<script src="/src/q5-2d-image.js"></script>
