--- a/home/index.html
+++ b/home/index.html
@@ -123,7 +123,7 @@ function windowResized() {
 			</script>
 				<md id="md2-2">
 					<p>q5 empowers artists with a <a
-							href="https://github.com/q5js/q5.js?tab=readme-ov-file#new-features-hdr-color-support"
+							href="https://github.com/quinton-ashley/q5.js?tab=readme-ov-file#new-features-hdr-color-support"
 							target="_blank">wider range of colors</a> 🤩</p>
 				</md>
 			</div>
@@ -158,7 +158,7 @@ text('Hello!', 50, 50);
 				<h2 id="more-flexible-🤹">More flexible 🤹</h2>
 				<p>q5's top-level global mode makes the <code>setup</code> function optional, letting you use q5 functions
 					anywhere. 👀</p>
-				<pre><code class="language-js">Q5();
+				<pre><code class="language-js">new Q5();
 
 createCanvas(400, 400);
 </code></pre>
@@ -166,7 +166,7 @@ createCanvas(400, 400);
 			<md id="md4-1">
 				<h2 id="modular-design-🧩">Modular design 🧩</h2>
 				<p>q5 is already ~20x smaller than p5, but for extremely lightweight use, load only the features you need from
-					the <a href="https://github.com/q5js/q5.js/tree/main/src" target="_blank"><code>src</code>
+					the <a href="https://github.com/quinton-ashley/q5.js/tree/main/src" target="_blank"><code>src</code>
 						folder</a>. 📦</p>
 				<pre><code class="language-html">&lt;script src="https://q5js.org/src/q5-core.js"&gt;
 &lt;script src="https://q5js.org/src/q5-2d-canvas.js"&gt;
@@ -186,7 +186,7 @@ createCanvas(400, 400);
 			<h2 id="join-our-community-🤝">Join our community 🤝</h2>
 			<p>The future of creative coding is here! Join us on the <a href="" target="_blank">q5 community Discord</a>.</p>
 			<p>If you'd like to work on q5.js, check out our <a
-					href="https://github.com/q5js/q5.js/?tab=readme-ov-file#contributor-code-of-conduct"
+					href="https://github.com/quinton-ashley/q5.js/?tab=readme-ov-file#contributor-code-of-conduct"
 					target="_blank">Contributor Code of Conduct</a> and <a
 					href="https://github.com/users/quinton-ashley/projects/4/views/1" target="_blank">Project Planning Board</a>.
 			</p>
@@ -200,8 +200,15 @@ createCanvas(400, 400);
 					in donations</a>.</p>
 			<p>Despite taking exorbitant salaries, the foundation's executives are too <a
 					href="https://www.linkedin.com/in/edsaber/" target="_blank">busy working other full-time jobs</a> to focus on
-				p5. Volunteers do most of the real work, yet it takes months for paid staff to approve and publish crucial
-				updates. 🕵️</p>
+				p5. They think just because p5 is open source, there's no need to pay developers. Volunteer contributors do all
+				the real work, yet somehow it still takes months for staff to review and publish simple bug fixes. 🕵️</p>
+			<p>When criticized, TPF staff play the victim, gaslight, silence dissent, and badmouth former contributors,
+				regardless of how much time and effort they've donated to TPF projects. This behavior is inexcusable. Its
+				driving away the very people who made Processing and p5 great. 🚪</p>
+			<p>The q5 team is not "anti-p5". 🌸</p>
+			<p>We recognize that the <a href="https://processingfoundation.org/grants" target="_blank">pro5 grants</a> are an
+				overdue step in the right direction. But many of the planned p5 v2 features have been promised for years and we
+				got tired of waiting. 🕰️</p>
 			<p>Creative coders deserve better: let's make it happen together! q5 will be run as a <a
 					href="https://en.wikipedia.org/wiki/Worker_cooperative" target="_blank">worker co-op</a>. All contributors
 				will be fairly compensated for their work. 🤝</p>
