--- a/home/index.html
+++ b/home/index.html
@@ -205,10 +205,8 @@ createCanvas(400, 400);
 			<p>When criticized, TPF staff play the victim, gaslight, silence dissent, and badmouth former contributors,
 				regardless of how much time and effort they've donated to TPF projects. This behavior is inexcusable. Its
 				driving away the very people who made Processing and p5 great. 🚪</p>
-			<p>The q5 team is not "anti-p5". 🌸</p>
-			<p>We recognize that the <a href="https://processingfoundation.org/grants" target="_blank">pro5 grants</a> are an
-				overdue step in the right direction. But many of the planned p5 v2 features have been promised for years and we
-				got tired of waiting. 🕰️</p>
+			<p>The q5 team is not "anti-p5". We aim to carry on Processing's legacy by continuing to make creative coding fun
+				and accessible. 🌸</p>
 			<p>Creative coders deserve better: let's make it happen together! q5 will be run as a <a
 					href="https://en.wikipedia.org/wiki/Worker_cooperative" target="_blank">worker co-op</a>. All contributors
 				will be fairly compensated for their work. 🤝</p>
