--- a/home/index.html
+++ b/home/index.html
@@ -187,9 +187,8 @@ createCanvas(400, 400);
 			<p>The future of creative coding is here! Join us on the <a href="" target="_blank">q5 community Discord</a>.</p>
 			<p>If you'd like to work on q5.js, check out our <a
 					href="https://github.com/quinton-ashley/q5.js/?tab=readme-ov-file#contributor-code-of-conduct"
-					target="_blank">Contributor Code of Conduct</a> and <a
-					href="https://github.com/users/quinton-ashley/projects/4/views/1" target="_blank">Project Planning Board</a>.
-			</p>
+					target="_blank">Contributor Code of Conduct</a> and <a href="https://github.com/orgs/q5js/projects/1/views/1"
+					target="_blank">Project Planning Board</a>.</p>
 		</md>
 	</div>
 	<div id="reel10">
