--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="refresh" content="0; url=home" />
-	<title>q5.js redirect</title>
+	<title>q5 redirect</title>
 </head>
 
 <body> </body>
