--- a/home/index.html
+++ b/home/index.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>q5</title>
@@ -8,7 +11,7 @@
 
 <body class="light">
 	<main></main>
-	<div id="reel0">
+	<div id="reel0" class="reel">
 		<div class="brand">
 			<a href="https://github.com/q5js/q5.js">
 				<div class="img q5js_logo"></div>
@@ -25,12 +28,15 @@
 			</div>
 		</nav>
 	</div>
-	<div id="reel1">
+	<div id="reel1" class="reel">
 		<md id="md1-0">
-<h2 id="the-sequel-to-p5js-is-here-🎉">The sequel to p5.js is here! 🎉</h2>
-<p>q5.js is a new implementation of the <a href="https://p5js.org" target="_blank">p5</a> API that's performance optimized and packed with additional features to make creative coding even more fun and accessible.</p>
-<p>q5 works out of the box with your existing p5 2D sketches and even supports popular libraries like <a href="https://p5js.org/reference/#/libraries/p5.sound" target="_blank">p5.sound</a> and <a href="https://p5play.org" target="_blank">p5play</a>.</p>
-</md>
+			<h2 id="the-sequel-to-p5js-is-here-🎉">The sequel to p5.js is here! 🎉</h2>
+			<p>q5.js is a new implementation of the <a href="https://p5js.org" target="_blank">p5</a> API that's performance
+				optimized and packed with additional features to make creative coding even more fun and accessible.</p>
+			<p>q5 works out of the box with your existing p5 2D sketches and even supports popular libraries like <a
+					href="https://p5js.org/reference/#/libraries/p5.sound" target="_blank">p5.sound</a> and <a
+					href="https://p5play.org" target="_blank">p5play</a>.</p>
+		</md>
 		<div class="minis horiz">
 			<script type="mie/p5" id="p5.js" horiz="" width="350px">
 function setup() {
@@ -46,10 +52,10 @@ function setup() {
 			</script>
 		</div>
 	</div>
-	<div id="reel2">
+	<div id="reel2" class="reel">
 		<md id="md2-0">
-<h2 id="more-vibrant-colors-🎨">More vibrant colors! 🎨</h2>
-</md>
+			<h2 id="more-vibrant-colors-🎨">More vibrant colors! 🎨</h2>
+		</md>
 		<div class="minis horiz">
 			<div>
 				<script type="mie/p5" id="SDR" hide-editor="">
@@ -84,8 +90,8 @@ function windowResized() {
 }
 				</script>
 				<md id="md2-1">
-<p>In p5, bright colors can look dull on modern devices 😕</p>
-</md>
+					<p>In p5, bright colors can look dull on modern devices 😕</p>
+				</md>
 			</div>
 			<div>
 				<script type="mie/q5" id="HDR" hide-editor="">
@@ -116,83 +122,119 @@ function windowResized() {
 }
 			</script>
 				<md id="md2-2">
-<p>q5 empowers artists with a <a href="https://github.com/quinton-ashley/q5.js?tab=readme-ov-file#new-features-hdr-color-support" target="_blank">wider range of colors</a> 🤩</p>
-</md>
+					<p>q5 empowers artists with a <a
+							href="https://github.com/quinton-ashley/q5.js?tab=readme-ov-file#new-features-hdr-color-support"
+							target="_blank">wider range of colors</a> 🤩</p>
+				</md>
 			</div>
 		</div>
 	</div>
-	<div id="reel3">
+	<div id="reel3" class="reel">
 		<md id="md3-0">
-<h2 id="more-help-for-beginners-✨">More help for beginners ✨</h2>
-<p>Why doesn't this code work? <code>text('Hello!')</code> 🤔</p>
-</md>
+			<h2 id="more-help-for-beginners-✨">More help for beginners ✨</h2>
+			<p>Why doesn't this code work? <code>text('Hello!')</code> 🤔</p>
+		</md>
 		<div class="minis horiz">
 			<md id="md3-1">
-<p>p5's error messages are often too vague, leaving users searching for help. 🙋</p>
-<pre><code>🌸 p5.js says: [test.js, line 19] text() was expecting at least 3 arguments, but received only 1.
+				<p>p5's error messages are often too vague, leaving users searching for help. 🙋</p>
+				<pre><code>🌸 p5.js says: [test.js, line 19] text() was expecting at least 3 arguments, but received only 1.
 </code></pre>
-<p>Why not ask ChatGPT 4o? It excels at identifying the most common errors that beginners make: typos, missing syntax, incorrect arguments, and more.</p>
-</md>
+				<p>Why not ask ChatGPT 4o? It excels at identifying the most common errors that beginners make: typos, missing
+					syntax, incorrect arguments, and more.</p>
+			</md>
 			<md id="md3-2">
-<p>Run q5's <code>askAI()</code> function before code that isn't working as expected. 🤖</p>
-<pre><code>The `text` function requires the x and y coordinates where the text should be drawn to the canvas.
+				<p>Run q5's <code>askAI()</code> function before code that isn't working as expected. 🤖</p>
+				<pre><code>The `text` function requires the x and y coordinates where the text should be drawn to the canvas.
 
 text('Hello!', 50, 50);
 </code></pre>
-<p>Spend less time debugging and more time creating! 🐛</p>
-</md>
+				<p>Spend less time debugging and more time creating! 🐛</p>
+			</md>
 		</div>
 	</div>
-	<div id="reel4">
+	<div id="reel4" class="reel">
+		<md id="md4-0">
+			<h2 id="more-flexible-💪">More flexible 💪</h2>
+			<p>The <code>flexibleCanvas</code> function enables you to stretch your art to fill any canvas size. A game
+				changer for generative artists! 🌱</p>
+		</md>
+		<!-- <div class="minis">
+			<script type="mie/q5" id="flexible">
+function setup() {
+	createCanvas(320, 240);
+	flexibleCanvas(100);
+	rect(20, 20, 80, 80);
+}
+			</script>
+		</div> -->
+	</div>
+	<div id="reel10" class="reel">
 		<div class="minis horiz">
-			<md id="md4-0">
-<h2 id="more-dynamic-🎚️">More dynamic 🎚️</h2>
-<p>Q5 instances can be created manually, which makes the <code>setup</code> function optional. Use q5 functions anywhere! 👀</p>
-<pre><code class="language-js">new Q5();
+			<md id="md10-0">
+				<h2 id="more-dynamic-🎚️">More dynamic 🎚️</h2>
+				<p>Q5 instances can be created manually, which makes the <code>setup</code> function optional. Use q5 functions
+					anywhere! 👀</p>
+				<pre><code class="language-js">new Q5();
 
 createCanvas(400, 400);
 </code></pre>
-</md>
-			<md id="md4-1">
-<h2 id="modular-design-🧩">Modular design 🧩</h2>
-<p>p5 is a whopping 5MB. q5 is already ~20x smaller, but for extremely lightweight use, load only the features you need from q5's <a href="https://github.com/q5js/q5.js/tree/main/src" target="_blank"><code>src</code> folder</a>. 📦</p>
-<pre><code class="language-html">&lt;script src="https://q5js.org/src/q5-core.js"&gt;
+			</md>
+			<md id="md10-1">
+				<h2 id="modular-design-🧩">Modular design 🧩</h2>
+				<p>p5 is a whopping 5MB. q5 is already ~20x smaller, but for extremely lightweight use, load only the features
+					you need from q5's <a href="https://github.com/q5js/q5.js/tree/main/src" target="_blank"><code>src</code>
+						folder</a>. 📦</p>
+				<pre><code class="language-html">&lt;script src="https://q5js.org/src/q5-core.js"&gt;
 &lt;script src="https://q5js.org/src/q5-2d-canvas.js"&gt;
 &lt;script src="https://q5js.org/src/q5-2d-drawing.js"&gt;
 </code></pre>
-</md>
+			</md>
 		</div>
 		<div class="minis horiz">
-			<md id="md4-2">
-<h2 id="more-flexible-💪">More flexible 💪</h2>
-<p>The <code>flexibleCanvas</code> function enables you to truly scale your art to any canvas size, without image scaling distortion. A game changer for generative artists! 🌱</p>
-</md>
-			<md id="md4-3">
-<h2 id="frame-your-art-🖼️">Frame your art 🖼️</h2>
-<p>The <code>displayMode</code> function lets you customize how your canvas is presented. Make it "centered", "maxed", or "fullscreen" without clipping or changing the aspect ratio. Use the "pixelated" rendering preset to make pixel art. 👾</p>
-</md>
+			<md id="md10-2">
+				<h2 id="frame-your-art-🖼️">Frame your art 🖼️</h2>
+				<p>The <code>displayMode</code> function lets you customize how your canvas is presented. Make it "centered",
+					"maxed", or "fullscreen" without clipping or changing the aspect ratio. Use the "pixelated" rendering preset
+					to make pixel art. 👾</p>
+			</md>
+			<md id="md10-3">
+				<h2 id="webgpu-support-🚀">WebGPU support 🚀</h2>
+				<p>We're already working on a next-gen version of q5 that uses <a
+						href="https://developer.mozilla.org/en-US/docs/Web/API/WebGPU_API" target="_blank">WebGPU</a> for blazing
+					fast rendering. Stay tuned! 🏎️</p>
+			</md>
 		</div>
 	</div>
-	<div id="reel6">
-		<md id="md6-0">
-<h2 id="webgpu-support-🚀">WebGPU support 🚀</h2>
-<p>We're already working on a next-gen version of q5 that uses <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebGPU_API" target="_blank">WebGPU</a> for blazing fast rendering. Stay tuned! 🏎️</p>
-</md>
-		<md id="md6-1">
-<h2 id="join-our-community-🤝">Join our community 🤝</h2>
-<p>The future of creative coding is here! Join us on the <a href="" target="_blank">q5 community Discord</a>.</p>
-<p>If you'd like to work on q5.js, check out our <a href="https://github.com/quinton-ashley/q5.js/?tab=readme-ov-file#contributor-code-of-conduct" target="_blank">Contributor Code of Conduct</a> and <a href="https://github.com/orgs/q5js/projects/1/views/1" target="_blank">Project Planning Board</a>.</p>
-</md>
+	<div id="reel11" class="reel">
+		<md id="md11-0">
+			<h2 id="join-our-community-🤝">Join our community 🤝</h2>
+			<p>The future of creative coding is here! Join us on the <a href="https://discord.gg/QuxQYwGWuB"
+					target="_blank">q5 community Discord</a>. 🗺️</p>
+			<p>If you'd like to work on q5.js, check out our <a
+					href="https://github.com/quinton-ashley/q5.js/?tab=readme-ov-file#contributor-code-of-conduct"
+					target="_blank">Contributor Code of Conduct</a> and <a href="https://github.com/orgs/q5js/projects/1/views/1"
+					target="_blank">Project Planning Board</a>.</p>
+		</md>
 	</div>
-	<div id="reel10">
-		<md id="md10-0">
-<h2 id="why-make-q5-⚖️">Why make q5? ⚖️</h2>
-<p>In October 2023, The Processing Foundation's co-founder, Ben Fry, resigned and publicly criticized management for <a href="https://x.com/ben_fry/status/1709400641456501020" target="_blank">squandering millions of dollars in donations</a>.</p>
-<p>Despite taking exorbitant salaries, the foundation's executives are too <a href="https://www.linkedin.com/in/edsaber/" target="_blank">busy working other full-time jobs</a> to focus on p5. They think just because p5 is open source, volunteer contributors should do all the real work. Yet it still takes months for staff to simply review and publish updates. 🕵️</p>
-<p>When criticized, TPF staff play the victim, gaslight, silence dissent, and badmouth former contributors, regardless of how much time and effort they've donated to TPF projects. This behavior is inexcusable. Its driving away the people who made Processing and p5 great. 🚪</p>
-<p>The q5 team is not "anti-p5". We aim to carry on Processing's legacy by continuing to make creative coding fun and accessible. 🌸</p>
-<p>Creative coders deserve better: let's make it happen together! q5 will be run as a <a href="https://en.wikipedia.org/wiki/Worker_cooperative" target="_blank">worker co-op</a>. All contributors will be fairly compensated for their work. 🤝</p>
-</md>
+	<div id="reel12" class="reel">
+		<md id="md12-0">
+			<h2 id="why-make-q5-⚖️">Why make q5? ⚖️</h2>
+			<p>In October 2023, The Processing Foundation's co-founder, Ben Fry, resigned and publicly criticized management
+				for <a href="https://x.com/ben_fry/status/1709400641456501020" target="_blank">squandering millions of dollars
+					in donations</a>.</p>
+			<p>Despite taking exorbitant salaries, the foundation's executives are too <a
+					href="https://www.linkedin.com/in/edsaber/" target="_blank">busy working other full-time jobs</a> to focus on
+				p5. They think just because p5 is open source, volunteer contributors should do all the real work. Yet it still
+				takes months for staff to simply review and publish updates. 🕵️</p>
+			<p>When criticized, TPF staff play the victim, gaslight, silence dissent, and badmouth former contributors,
+				regardless of how much time and effort they've donated to TPF projects. This behavior is inexcusable. Its
+				driving away the people who made Processing and p5 great. 🚪</p>
+			<p>The q5 team is not "anti-p5". We aim to carry on Processing's legacy by continuing to make creative coding fun
+				and accessible. 🌸</p>
+			<p>Creative coders deserve better: let's make it happen together! q5 will be run as a <a
+					href="https://en.wikipedia.org/wiki/Worker_cooperative" target="_blank">worker co-op</a>. All contributors
+				will be fairly compensated for their work. 🤝</p>
+		</md>
 	</div>
 
 	<script src="../q5.js"></script>
@@ -290,7 +332,6 @@ createCanvas(400, 400);
 	<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.34.2/src-min-noconflict/ext-beautify.js"></script>
 	<script src="main.js"></script>
 	<script src="/home/mie.js"></script>
+</body>
 
-
-
-</body></html>
+</html>
