--- a/dev/index.html
+++ b/dev/index.html
@@ -25,7 +25,7 @@
 	<script src="/src/q5-2d-text.js"></script>
 	<script src="/src/q5-ai.js"></script>
 	<script src="/src/q5-color.js"></script>
-	<!-- <script src="/src/q5-display.js"></script> -->
+	<script src="/src/q5-display.js"></script>
 	<script src="/src/q5-input.js"></script>
 	<script src="/src/q5-math.js"></script>
 	<script src="/src/q5-sound.js"></script>
