--- a/dev/index.html
+++ b/dev/index.html
@@ -33,7 +33,7 @@
 	<script src="/src/q5-vector.js"></script>
 
 	<!-- <script src="/src/q5-dom.js"></script> -->
-	<!-- <script src="/src/q5-noisier.js"></script> -->
+	<script src="/src/q5-noisier.js"></script>
 	<!-- <script src="/src/q5-sensors.js"></script> -->
 
 	<script src="test.js"></script>
